Fix: Prevent section "Itinerary" from expanding beyond screen width on mobile

--- a/wp-content/themes/bootscore-child-main/css/custom.css
+++ b/wp-content/themes/bootscore-child-main/css/custom.css
@@ -1,3 +1,12 @@
+.ex_s_lick-prev {
+    left: 0px !important;    
+}
+.ex_s_lick-next {
+    right: 0px !important;
+}
+.ex_s_lick-arrow {
+    width: fit-content !important;
+}
 .features-vertical-tabs button img {
    filter: none; 
 }
